misc/iptables-rules
# Generated by iptables-save v1.4.21 on Fri Jun 27 17:32:42 2014
*nat
:PREROUTING ACCEPT [8674:854635]
:INPUT ACCEPT [1:60]
:OUTPUT ACCEPT [41:2847]
:POSTROUTING ACCEPT [70:4624]
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
COMMIT
# Completed on Fri Jun 27 17:32:42 2014
# Generated by iptables-save v1.4.21 on Fri Jun 27 17:32:42 2014
*mangle
:PREROUTING ACCEPT [278309:50555837]
:INPUT ACCEPT [261065:48858427]
:FORWARD ACCEPT [8672:851946]
:OUTPUT ACCEPT [256729:365766364]
:POSTROUTING ACCEPT [265401:366618310]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Fri Jun 27 17:32:42 2014
# Generated by iptables-save v1.4.21 on Fri Jun 27 17:32:42 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [204:152673]
:fail2ban-ssh - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A INPUT -s 10.10.0.0/16 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.20.0.0/17 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -s 172.16.242.0/25 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -m physdev --physdev-is-bridged -j ACCEPT
-A fail2ban-ssh -j RETURN
COMMIT
# Completed on Fri Jun 27 17:32:42 2014
